Mudança nos métodos de listas dos drones